--- a/ueber/index.html
+++ b/ueber/index.html
@@ -136,7 +136,9 @@
                     <section>
                         <h2>Woran arbeiten wir?</h2>
                         <p>
-                            Wir arbeiten momentan an <a href="/pandora-prometheus/">Pandora & Prometheus</a>, einem abendfüllenden Theaterstück, das im Herbst 2024 Premiere feiern wird. Es vereint Elemente des Musik- und Tanztheaters mit Feuerartistik. Damit führen wir die künstlerische Linie unseres Erstlingwerks <a href="/aus-der-asche">Aus der Asche - eine Feueroper</a> aus dem Jahr 2020 weiter.
+                            Wir arbeiten momentan an <a href="/pandora-prometheus/">Pandora & Prometheus</a>, einem abendfüllenden Theaterstück, das im Herbst 2024 Premiere feierte.
+                            Wir führen es im Frühling 2025 in einer weiterentwickelten und hochglanzpolierten Form erneut auf. Es vereint Elemente des Musik- und Tanztheaters mit Feuerartistik.
+                            Damit führen wir die künstlerische Linie unseres Erstlingwerks <a href="/aus-der-asche">Aus der Asche - eine Feueroper</a> aus dem Jahr 2020 weiter.
                             <br>
                             Wir freuen uns auf euch!
                         </p>
