Neues Hero Video 2025

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             <img class="vid-placeholder" src="assets/img/fotos/Teaser Website Still Image.jpg">
 
             <video autoplay muted loop playsinline poster="assets/img/fotos/Teaser Website Still Image.jpg" id="bgvid" class="desktop">
-                <source src="assets/videos/Teaser Website.webm" type="video/webm">
-                <source src="assets/videos/Teaser Website.mp4" type="video/mp4">
+                <source src="assets/videos/Teaser Website 2025.webm" type="video/webm">
+                <source src="assets/videos/Teaser Website 2025.mp4" type="video/mp4">
               
             </video>
         </div>
