--- a/index.html
+++ b/index.html
@@ -91,24 +91,20 @@
 
         </div>
 
-
-        <!-- BACKGROUND VIDEO -->
-        <!--Old Video
         <div class="bg-video">
-            <img class="vid-placeholder" src="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg">
+            <img
+                class="vid-placeholder"
+                src="assets/img/fotos/teaser-placeholder-1x.jpg"
+                srcset="assets/img/fotos/teaser-placeholder-small.jpg 960w,
+                        assets/img/fotos/teaser-placeholder-1x.jpg 1920w,
+                        assets/img/fotos/teaser-placeholder-2x.jpg 3412w"
+                sizes="(max-width: 960px) 960w,
+                        (max-width:1920px) 1920w,
+                        3412w"
+                alt="Pandora und Prometheus -Schriftzug"
+                >
 
-            <video autoplay muted loop playsinline poster="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg" id="bgvid" class="desktop">
-                <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile_blue.webm" type="video/webm">
-                <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile_blue.mp4" type="video/mp4">
-                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.ogv" type='video/ogg; codecs="theora, vorbis"'>
-                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.webm" type='video/webm;codecs="vp8, vorbis"'>
-            </video>
-        </div> -->
-
-        <div class="bg-video">
-            <img class="vid-placeholder" src="assets/img/fotos/Teaser Website Still Image.jpg">
-
-            <video autoplay muted loop playsinline poster="assets/img/fotos/Teaser Website Still Image.jpg" id="bgvid" class="desktop">
+            <video autoplay muted loop playsinline poster="assets/img/fotos/teaser-placeholder-1x.jpg" id="bgvid" class="desktop">
                 <source src="assets/videos/Teaser Website 2025.webm" type="video/webm">
                 <source src="assets/videos/Teaser Website 2025.mp4" type="video/mp4">
               
