teaser-placeholder als webp

--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
         <div class="bg-video">
             <img
                 class="vid-placeholder"
-                src="assets/img/fotos/teaser-placeholder-1x.jpg"
-                srcset="assets/img/fotos/teaser-placeholder-small.jpg 960w,
-                        assets/img/fotos/teaser-placeholder-1x.jpg 1920w,
-                        assets/img/fotos/teaser-placeholder-2x.jpg 3412w"
+                src="assets/img/fotos/teaser-placeholder-1x.webp"
+                srcset="assets/img/fotos/teaser-placeholder-small.webp 960w,
+                        assets/img/fotos/teaser-placeholder-1x.webp 1920w,
+                        assets/img/fotos/teaser-placeholder-2x.webp 3412w"
                 sizes="(max-width: 960px) 960w,
                         (max-width:1920px) 1920w,
                         3412w"
                 alt="Pandora und Prometheus -Schriftzug"
                 >
 
-            <video autoplay muted loop playsinline poster="assets/img/fotos/teaser-placeholder-1x.jpg" id="bgvid" class="desktop">
+            <video autoplay muted loop playsinline poster="assets/img/fotos/teaser-placeholder-1x.webp" id="bgvid" class="desktop">
                 <source src="assets/videos/Teaser Website 2025.webm" type="video/webm">
                 <source src="assets/videos/Teaser Website 2025.mp4" type="video/mp4">
               
