Weniger Schriftarten laden im Header

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="assets/CSS/burger.css">
     <link rel="stylesheet" href="assets/CSS/text-flex.css">
     <link rel="stylesheet" href="assets/CSS/styles.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <link href="https://fonts.googleapis.com/css?family=Abel|Josefin+Sans|Muli|Quicksand|Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="57x57" href="segno.ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="segno.ico/apple-icon-60x60.png">
