--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="assets/CSS/burger.css">
     <link rel="stylesheet" href="assets/CSS/text-flex.css">
     <link rel="stylesheet" href="assets/CSS/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -120,32 +119,32 @@
             <div class="icon">
                 <img class="flame-hover tg" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="tg-social-icon" href="https://t.me/theaterzurblauenstunde">
-                    <img class="social-icons tg" alt="telegram-social-icon" src="assets/img/telegram/Telegram_website.png">
-                    <img class="social-icons tg gold" alt="telegram-social-icon" src="assets/img/telegram/Telegram_website_gold.png">
+                    <img class="social-icons tg" alt="telegram-social-icon" src="assets/img/social/website_telegram.svg">
+                    <img class="social-icons tg gold" alt="telegram-social-icon" src="assets/img/social/website_telegram_gold.svg">
                 </a>
             </div>
 
             <div class="icon">
                 <img class="flame-hover fb" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="fb-social-icon" href="https://www.facebook.com/theaterzurblauenstunde/">
-                    <img class="social-icons fb" alt="facebook-social-icon" src="assets/img/facebook/f_logo_RGB-White_512.png">
-                    <img class="social-icons fb gold" alt="facebook-social-icon" src="assets/img/facebook/f_logo_RGB-Gold_512.png">
+                    <img class="social-icons fb" alt="facebook-social-icon" src="assets/img/social/website_facebook.svg">
+                    <img class="social-icons fb gold" alt="facebook-social-icon" src="assets/img/social/website_facebook_gold.svg">
                 </a>
             </div>
 
             <div class="icon">
                 <img class="flame-hover yt" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="yt-social-icon" href="https://www.youtube.com/channel/UC4h5-kpujSkzAW2fv-g0sXw">
-                    <img class="social-icons yt" alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_dark.png">
-                    <img class="social-icons yt gold" alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_gold.png">
+                    <img class="social-icons yt" alt="youtube-social-icon" src="assets/img/social/website_youtube.svg">
+                    <img class="social-icons yt gold" alt="youtube-social-icon" src="assets/img/social/website_youtube_gold.svg">
                 </a>
             </div>
 
             <div class="icon">
                 <img class="flame-hover ig" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="ig-social-icon" href="https://www.instagram.com/theaterzurblauenstunde/">
-                    <img class="social-icons ig" alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_white.png">
-                    <img class="social-icons ig gold" alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_gold.png">
+                    <img class="social-icons ig" alt="instagram-social-icon" src="assets/img/social/website_instagram.svg">
+                    <img class="social-icons ig gold" alt="instagram-social-icon" src="assets/img/social/website_instagram_gold.svg">
                 </a>
             </div>
 
