Added preload zu Googlefont

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="preload" as="style">
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="57x57" href="segno.ico/apple-icon-57x57.png">
@@ -38,7 +39,8 @@
     <div class="flex flex-align-center">
         <div class="small-logo">
             <a href="/">
-                <img src="assets/img/logo/TZBS_Logo-Initialen.svg">
+                <img src="assets/img/logo/TZBS_Logo-Initialen.svg"
+                        alt="Logo des Theaters zur blauen Stunde mit den Buchstaben TZBS">
             </a>
         </div>
         <div>
