aria-label für Video

--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
                 alt="Pandora und Prometheus -Schriftzug"
                 >
 
-            <video autoplay muted loop playsinline poster="assets/img/fotos/teaser-placeholder-1x.webp" id="bgvid" class="desktop">
+            <video autoplay muted loop playsinline
+                    title="Dieses Video enthält keinen Ton."
+                    aria-label="Dieses Video enthält keinen Ton"
+                    poster="assets/img/fotos/teaser-placeholder-1x.webp"
+                    id="bgvid"
+                    class="desktop">
                 <source src="assets/videos/Teaser Website 2025.webm" type="video/webm">
                 <source src="assets/videos/Teaser Website 2025.mp4" type="video/mp4">
               
