--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" 
+            content="Das Theater zur blauen Stunde begeistert mit Feuertheater, Musik, Tanz und Akrobatik. Wir vereinen verschiedene Kunstformen in einzigartigen Aufführungen. Erleben Sie unser neues Stück Pandora & Prometheus, das Feuer, Musik- und Tanztheater auf spektakuläre Weise kombiniert.">
+
+
     <title>
         Theater zur blauen Stunde
     </title>
