Header und Footer via Javascript laden

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" 
-            content="Das Theater zur blauen Stunde begeistert mit Feuertheater, Musik, Tanz und Akrobatik. Wir vereinen verschiedene Kunstformen in einzigartigen Aufführungen. Erleben Sie unser neues Stück Pandora & Prometheus, das Feuer, Musik- und Tanztheater auf spektakuläre Weise kombiniert.">
+            content="Das Theater zur blauen Stunde begeistert mit Feuertheater, Musik, Tanz und Akrobatik. Wir vereinen verschiedene Kunstformen in einzigartigen Aufführungen.
+            Erleben Sie unser neues Stück Pandora & Prometheus, das Feuer, Musik- und Tanztheater auf spektakuläre Weise kombiniert.">
 
 
     <title>
         Theater zur blauen Stunde
     </title>
+
+    <script defer src="main.js"></script>
+
     <link rel="stylesheet" href="assets/CSS/burger.css">
     <link rel="stylesheet" href="assets/CSS/text-flex.css">
     <link rel="stylesheet" href="assets/CSS/styles.css">
@@ -53,8 +57,7 @@
 
     </div>
     <header>
-        <div class="hover-box">
-            <!--<img class="flame-in-header" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">-->
+        <!-- <div class="hover-box">
             <input id="burger" type="checkbox" />
 
             <label for="burger">
@@ -78,6 +81,7 @@
                 </ul>
             </nav>
         </div>
+        -->
 
 
     </header>
@@ -125,7 +129,7 @@
 
     </main>
     <footer class="flex flex-column flex-align-center">
-        <div class="icon-bar">
+        <!--<div class="icon-bar">
 
             <div class="icon">
                 <img class="flame-hover tg" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
@@ -171,7 +175,7 @@
                 <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
                 <p class="impressum"><a href="/impressum">impressum & pressekit</a></p>
             </div>
-        </div>
+        </div>-->
     </footer>
 </body>
 
