Doch keine Javascript Header/Footer-Lösung mehr

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="de">
 
 <head>
-    <script defer src="main.js"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -57,7 +56,7 @@
 
     </div>
     <header>
-        <!-- <div class="hover-box">
+        <div class="hover-box">
             <input id="burger" type="checkbox" />
 
             <label for="burger">
@@ -81,7 +80,6 @@
                 </ul>
             </nav>
         </div>
-        -->
 
 
     </header>
@@ -129,7 +127,7 @@
 
     </main>
     <footer class="flex flex-column flex-align-center">
-        <!--<div class="icon-bar">
+        <div class="icon-bar">
 
             <div class="icon">
                 <img class="flame-hover tg" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
@@ -175,7 +173,7 @@
                 <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
                 <p class="impressum"><a href="/impressum">impressum & pressekit</a></p>
             </div>
-        </div>-->
+        </div>
     </footer>
 </body>
 
