Verbesserte SEO und WCAG

--- a/ueber/index.html
+++ b/ueber/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 
 <head>
 
@@ -67,7 +67,7 @@
         <nav>
             <div class="hidetext"></div>
             <ul>
-                <li><a href="/">start</a></li>
+                <li><a href="/">Startseite</a></li>
                 <li><a href="/ueber">über uns</a></li>
                 <li><a href="/pandora-prometheus/">Pandora & Prometheus (2024)</a></li>
                 <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper (2020)</a></li>
