Alt text gekürzt

--- a/ueber/index.html
+++ b/ueber/index.html
@@ -84,11 +84,11 @@
                 <div class="col-img">
                     <img class="teaser-screenshot"
                         title="Das Ensemble von “Pandora & Prometheus” bei der Probe"
-                        alt="Ein Großteil des Ensembles des Theaters zur blauen Stunde trägt eine Darstellerin auf den Schultern.Diese hält eine brennende Fackel in die Luft. Die Stimmung ist freudig."
+                        alt="Das Ensemble trägt eine Darstellerin auf den Schultern."
                         src="../assets/img/fotos/feuerprobe-2024-2x.webp"
                         srcset="../assets/img/fotos/feuerprobe-2024-1x.webp 768w,
                                 ../assets/img/fotos/feuerprobe-2024-2x.webp 1280w"
-                        >
+                    >
                         
                 </div>
                 <div class="col-txt">
