Syntax Errors fixed

--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -119,7 +119,7 @@
                     <img title="Pandora und Prometheus Artwork"
                          alt="Pandora und Prometheus Artwork"
                          src="../assets/img/fotos/Pandora-und-Prometheus_square-20251920-1x.webp"
-                         srcet="../assets/img/fotos/Pandora-und-Prometheus_square-20251920-1x.webp 768w,
+                         srcset="../assets/img/fotos/Pandora-und-Prometheus_square-20251920-1x.webp 768w,
                                 ../assets/img/fotos/Pandora-und-Prometheus_square-20251920-2x.webp 1280w">
                 </div>
                 <div class="col-txt">
@@ -143,7 +143,7 @@
                         <img title="Apollon und Muse"
                              alt="Apollon und Muse"
                              src="../assets/img/fotos/apollon-muse-1x.webp"
-                             srcset="../assets/img/fotos/apollon-muse-1x.webp 768w
+                             srcset="../assets/img/fotos/apollon-muse-1x.webp 768w,
                                      ../assets/img/fotos/apollon-muse-2x.webp 1280w">
                         <figcaption>Apollon und die Muse Kalliope </figcaption>
                     </figure>
@@ -175,7 +175,7 @@
                         <img title="Neugier"
                              alt="Neugier"
                              src="../assets/img/fotos/neugier-1x.webp"
-                             srcset="../assets/img/fotos/neugier-1x.webp 768w
+                             srcset="../assets/img/fotos/neugier-1x.webp 768w,
                                      ../assets/img/fotos/neugier-2x.webp 1280w"
                              >
                         <figcaption>Die Menschen entdecken das Feuer</figcaption>
@@ -184,7 +184,7 @@
                         <img title="Pandora und Prometheus"
                              alt="Pandora und Prometheus"
                              src="../assets/img/fotos/pandora-prometheus-1x.webp"
-                             srcset="../assets/img/fotos/pandora-prometheus-1x.webp 768w
+                             srcset="../assets/img/fotos/pandora-prometheus-1x.webp 768w,
                                      ../assets/img/fotos/pandora-prometheus-2x.webp 1280w"
                              style="transform: scalex(1)">
                         <figcaption>Noch lachen Pandora und Prometheus über die olympischen Gottheiten</figcaption>
