--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -98,7 +98,11 @@
             <hr>
             <article class="flex flex-row flex-align-start flex-justify-center flex-wrap">
                 <div class="col-img">
-                    <img title="Aus der Asche Artwork" alt="Aus der Asche Artwork" src="../assets/img/fotos/Aus-der-Asche.jpg">
+                    <img title="Aus der Asche Artwork"
+                         alt="Aus der Asche Artwork"
+                         src="../assets/img/fotos/Aus-der-Asche-1x.webp"
+                         srcset="../assets/img/fotos/Aus-der-Asche-1x.webp 768w,
+                                 ../assets/img/fotos/Aus-der-Asche-2x.webp 1280w">
                 </div>
                 <div class="col-txt">
                     <section>
@@ -119,11 +123,19 @@
             <article class="flex flex-row-rev flex-align-start flex-justify-center flex-wrap">
                 <div class="col-img flex flex-wrap flex-justify-evenly">
                     <figure class="col-img">
-                        <img title="Zeus und Hera" alt="Zeus und Hera" src="../assets/img/fotos/Gottheiten.JPG">
+                        <img title="Zeus und Hera"
+                             alt="Zeus und Hera"
+                             src="../assets/img/fotos/Gottheiten-1x.webp"
+                             srcset="../assets/img/fotos/Gottheiten-1x.webp 768w,
+                                     ../assets/img/fotos/Gottheiten-2x.webp 1280w">
                         <figcaption>Zeus und Hera, das Götterpaar </figcaption>
                     </figure>
                     <figure class="col-img">
-                        <img title="Eine der Schicksalsschwestern" alt="Eine der Schicksalsschwestern" src="../assets/img/fotos/Schicksalsschwestern.JPG">
+                        <img title="Eine der Schicksalsschwestern"
+                             alt="Eine der Schicksalsschwestern"
+                             src="../assets/img/fotos/Schicksalsschwestern-1x.webp"
+                             srcset="../assets/img/fotos/Schicksalsschwestern-1x.webp 768w,
+                                     ../assets/img/fotos/Schicksalsschwestern-2x.webp 1280w">
                         <figcaption>Die Schicksalsschwestern verlesen die Zukunft </figcaption>
                     </figure>
                 </div>
@@ -148,11 +160,20 @@
             <article class="flex flex-row flex-justify-evenly flex-wrap flex-align-center">
                 <div class="col-img flex flex-wrap flex-justify-evenly">
                     <figure class="col-img">
-                        <img title="Aeneas" alt="Aeneas" src="../assets/img/fotos/Aeneas.JPG">
+                        <img title="Aeneas"
+                             alt="Aeneas"
+                             src="../assets/img/fotos/Aeneas-1x.webp"
+                             srcset="../assets/img/fotos/Aeneas-1x.webp 768w,
+                                     ../assets/img/fotos/Aeneas-2x.webp 1280w">
                         <figcaption>Aeneas, Überlebender des trojanischen Krieges</figcaption>
                     </figure>
                     <figure class="col-img">
-                        <img title="Dido" alt="Dido" src="../assets/img/fotos/Dido.JPG" style="transform: scalex(-1)">
+                        <img title="Dido"
+                             alt="Dido"
+                             src="../assets/img/fotos/Dido-1x.webp"
+                             srcset="../assets/img/fotos/Dido-1x.webp 768w,
+                                     ../assets/img/fotos/Dido-1x.webp 1280w"
+                             style="transform: scalex(-1)">
                         <figcaption>Dido, Herrscherin Karthagos</figcaption>
                     </figure>
                 </div>
