--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" 
+            content="Das Theater zur blauen Stunde begeistert mit Feuertheater, Musik, Tanz und Akrobatik. Wir vereinen verschiedene Kunstformen in einzigartigen Aufführungen.
+            Erleben Sie unser neues Stück Pandora & Prometheus, das Feuer, Musik- und Tanztheater auf spektakuläre Weise kombiniert.">
+
+
     <title>
         Theater zur blauen Stunde
     </title>
-    <link href="https://fonts.googleapis.com/css?family=Francois+One|Open+Sans|Roboto:900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../assets/CSS/burger.css">
     <link rel="stylesheet" href="../assets/CSS/text-flex.css">
     <link rel="stylesheet" href="../assets/CSS/styles.css">
-
-    <link href="https://fonts.googleapis.com/css?family=Abel|Josefin+Sans|Muli|Quicksand|Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="preload" as="style">
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="57x57" href="../segno.ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../segno.ico/apple-icon-60x60.png">
@@ -38,7 +46,8 @@
     <div class="flex flex-align-center">
         <div class="small-logo">
             <a href="/">
-                <img src="../assets/img/logo/N_Segno_Initialen.svg">
+                <img src="../assets/img/logo/TZBS_Logo-Initialen.svg"
+                     alt="Logo des Theaters zur blauen Stunde mit den Buchstaben TZBS">
             </a>
         </div>
         <div>
@@ -59,7 +68,7 @@
         <nav>
             <div class="hidetext"></div>
             <ul>
-                <li><a href="/">start</a></li>
+                <li><a href="/">Startseite</a></li>
                 <li><a href="/ueber">über uns</a></li>
                 <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
                 <li><a href="/tickets">🔥 Tickets 🔥</a></li>
@@ -74,7 +83,12 @@
 
             <article class="flex flex-row flex-align-start flex-justify-center flex-wrap">
                 <div class="col-img">
-                    <img class="teaser-screenshot" title="Ein Teil des Ensembles von “Pandora & Prometheus” im Juli 2024" alt="Ein Teil des Ensembles von “Pandora & Prometheus” im Juli 2024" src="../assets/img/fotos/Gruppenfoto-Juli-2024.jpg">
+                    <img class="teaser-screenshot"
+                         title="Ein Teil des Ensembles von “Pandora & Prometheus” im Juli 2024"
+                         alt="Ein Teil des Ensembles von “Pandora & Prometheus” im Juli 2024"
+                         src="../assets/img/fotos/Gruppenfoto-Juli-2024-1x.webp"
+                         srcset="../assets/img/fotos/Gruppenfoto-Juli-2024-1x.webp 768w,
+                                 ../assets/img/fotos/Gruppenfoto-Juli-2024-2x.webp 1280w">
                 </div>
                 <div class="col-txt">
                     <section>
@@ -92,7 +106,12 @@
             </article>
             <article class="special flex flex-row-rev flex-align-start flex-justify-center flex-wrap">
                 <div class="col-img">
-                    <img class="teaser-screenshot" title="Ein Teil des Ensembles von “Pandora & Prometheus” im Juli 2024" alt="Ein Teil des Ensembles von “Pandora & Prometheus” im Juli 2024" src="../assets/img/fotos/Apollon-Muse-Kontakt.jpg">
+                    <img class="teaser-screenshot"
+                         title="Ein Teil des Ensembles von “Pandora & Prometheus” im Juli 2024"
+                         alt="Ein Teil des Ensembles von “Pandora & Prometheus” im Juli 2024"
+                         src="../assets/img/fotos/Apollon-Muse-Kontakt-1x.webp"
+                         srcset="../assets/img/fotos/Apollon-Muse-Kontakt-1x.webp 768w,
+                                 ../assets/img/fotos/Apollon-Muse-Kontakt-2x.webp 1280w">
                 </div>
                 <div class="col-txt">
                     <section>
@@ -156,34 +175,32 @@
             <div class="icon">
                 <img class="flame-hover tg" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="tg-social-icon" href="https://t.me/theaterzurblauenstunde">
-                    <img class="social-icons tg" alt="telegram-social-icon" src="../assets/img/telegram/Telegram_website.png">
-                    <img class="social-icons tg gold" alt="telegram-social-icon" src="../assets/img/telegram/Telegram_website_gold.png">
+                    <img class="social-icons tg" alt="telegram-social-icon" src="../assets/img/social/website_telegram.svg">
+                    <img class="social-icons tg gold" alt="telegram-social-icon" src="../assets/img/social/website_telegram_gold.svg">
                 </a>
             </div>
 
             <div class="icon">
                 <img class="flame-hover fb" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="fb-social-icon" href="https://www.facebook.com/theaterzurblauenstunde/">
-                    <img class="social-icons fb" alt="facebook-social-icon" src="../assets/img/facebook/f_logo_RGB-White_512.png">
-                    <img class="social-icons fb gold" alt="facebook-social-icon" src="../assets/img/facebook/f_logo_RGB-Gold_512.png">
+                    <img class="social-icons fb" alt="facebook-social-icon" src="../assets/img/social/website_facebook.svg">
+                    <img class="social-icons fb gold" alt="facebook-social-icon" src="../assets/img/social/website_facebook_gold.svg">
                 </a>
             </div>
-
-    
 
             <div class="icon">
                 <img class="flame-hover yt" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="yt-social-icon" href="https://www.youtube.com/channel/UC4h5-kpujSkzAW2fv-g0sXw">
-                    <img class="social-icons yt" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
-                    <img class="social-icons yt gold" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_gold.png">
+                    <img class="social-icons yt" alt="youtube-social-icon" src="../assets/img/social/website_youtube.svg">
+                    <img class="social-icons yt gold" alt="youtube-social-icon" src="../assets/img/social/website_youtube_gold.svg">
                 </a>
             </div>
 
             <div class="icon">
                 <img class="flame-hover ig" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="ig-social-icon" href="https://www.instagram.com/theaterzurblauenstunde/">
-                    <img class="social-icons ig" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
-                    <img class="social-icons ig gold" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_gold.png">
+                    <img class="social-icons ig" alt="instagram-social-icon" src="../assets/img/social/website_instagram.svg">
+                    <img class="social-icons ig gold" alt="instagram-social-icon" src="../assets/img/social/website_instagram_gold.svg">
                 </a>
             </div>
 
