Lazy Loading iframe

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -81,7 +81,8 @@
     </header>
     <main class="body-margin flex flex-column flex-align-center">
         <section id="trailer" class="flex flex-justify-center">
-            <iframe width="480px"
+            <iframe loading="lazy"
+                    width="480px"
                     height="240px"
                     src="https://www.youtube.com/embed/ecjxTfrydUI"
                     title="Trailer zu 'Aus der Asche - eine Feueroper'"
