no cookie iframe

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -84,7 +84,7 @@
             <iframe loading="lazy"
                     width="480px"
                     height="240px"
-                    src="https://www.youtube.com/embed/ecjxTfrydUI"
+                    src="https://www.youtube-nocookie.com/embed/ecjxTfrydUI"
                     title="Trailer zu 'Aus der Asche - eine Feueroper'"
                     frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
