--- a/tickets/index.html
+++ b/tickets/index.html
@@ -6,9 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" 
-            content="Das Theater zur blauen Stunde begeistert mit Feuertheater, Musik, Tanz und Akrobatik. Wir vereinen verschiedene Kunstformen in einzigartigen Aufführungen.
-            Erleben Sie unser neues Stück Pandora & Prometheus, das Feuer, Musik- und Tanztheater auf spektakuläre Weise kombiniert.">
-
+            content="Sichere dir jetzt Tickets für 'Pandora & Prometheus - Das Lied vom Feuer'! Erlebe eine einzigartige Inszenierung mit Feuerspiel, Live-Musik und packender Mythologie. Nur an ausgewählten Terminen in Berlin!">
 
     <title>
         Theater zur blauen Stunde
