--- a/pandora-prometheus/index.html
+++ b/pandora-prometheus/index.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" 
-            content="Das Theater zur blauen Stunde begeistert mit Feuertheater, Musik, Tanz und Akrobatik. Wir vereinen verschiedene Kunstformen in einzigartigen Aufführungen.
-            Erleben Sie unser neues Stück Pandora & Prometheus, das Feuer, Musik- und Tanztheater auf spektakuläre Weise kombiniert.">
+            content="Erlebe 'Pandora & Prometheus - Das Lied vom Feuer': eine spektakuläre Mischung aus Feuerspiel, Live-Musik, Tanz und Schauspiel. Entdecke die mitreißende Inszenierung von Mythen und Legenden im Abenteuerzentrum Berlin. Tickets sichern!">
 
 
     <title>
