--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" 
-            content="Das Theater zur blauen Stunde begeistert mit Feuertheater, Musik, Tanz und Akrobatik. Wir vereinen verschiedene Kunstformen in einzigartigen Aufführungen.
-            Erleben Sie unser neues Stück Pandora & Prometheus, das Feuer, Musik- und Tanztheater auf spektakuläre Weise kombiniert.">
+            content="Entdecke den Verein hinter 'Pandora & Prometheus'! Seit 2019 bieten wir eine Plattform für Künstler:innen, die Kunst ohne kommerzielle Zwänge erschaffen möchten. Werde Teil unserer Gemeinschaft!">
 
 
     <title>
