--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" 
-            content="Das Theater zur blauen Stunde begeistert mit Feuertheater, Musik, Tanz und Akrobatik. Wir vereinen verschiedene Kunstformen in einzigartigen Aufführungen.
-            Erleben Sie unser neues Stück Pandora & Prometheus, das Feuer, Musik- und Tanztheater auf spektakuläre Weise kombiniert.">
+            content="Erfahre, wie wir beim 'Theater zur blauen Stunde e.V.' mit deinen Daten umgehen: Verantwortliche, Verarbeitung auf der Webseite, im Verein, Fotos von Events und deine Rechte nach DSGVO.">
 
 
     <title>
