--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" 
-            content="Das Theater zur blauen Stunde begeistert mit Feuertheater, Musik, Tanz und Akrobatik. Wir vereinen verschiedene Kunstformen in einzigartigen Aufführungen.
-            Erleben Sie unser neues Stück Pandora & Prometheus, das Feuer, Musik- und Tanztheater auf spektakuläre Weise kombiniert.">
+            content="Tauche ein in die Welt von 'Aus der Asche - eine Feueroper'. Fotos und Videos dieses einzigartigen Flammendramas aus dem Jahr 2020, das den Mythos von Dido und Aeneas mit Feuerspiel, Musik und Schauspiel neu erzählte. Jetzt entdecken!">
 
 
     <title>
