--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -96,10 +96,10 @@
                 <p class="text-c"> Freies Musiktheater trifft Feuerspiel! Der Mythos um Dido und Aeneas neu entfacht!<br>
                 Ein einzigartiges Flammendrama, nur in Berlin!</p>
                 <section class="daten flex flex-justify-between flex-row">
-                <section class="text-l"><h2>29. und 30. August 2020<br>
-                    </h2>Abenteuerzentrum Grunewald</section>
-                <section class="text-r"><h2>26 und 27. September 2020<br></h2>
-                    Freiluftkino Friedrichshagen</section>
+                <section class="text-l"><h2>&#128197 29. und 30. August 2020<br>
+                    </h2>&#128205 Abenteuerzentrum Grunewald</section>
+                <section class="text-r"><h2>&#128197 26 und 27. September 2020<br></h2>
+                    &#128205 Freiluftkino Friedrichshagen</section>
                     </section>
 
             </article>
@@ -187,6 +187,80 @@
                 </div>
 
 
+            </article>
+            <article class="flex flex-row flex-justify-evenly flex-wrap flex-align-center">
+                <div class="besetzung">
+                    <section>
+                        <h2>Besetzung</h2>
+                        <div class="grid">
+                            <!-- Header -->
+                            <div class="grid-header">Rolle</div>
+                            <div class="grid-header">Schauspieler:in</div>
+                            <div class="grid-header">Bemerkung</div>
+                            
+                            <!-- Inhalt -->
+                            <div class="grid-item">Dido</div>
+                            <div class="grid-item">Greta Hoss</div>
+                            <div class="grid-item">Herrscherin Karthagos</div>
+
+                            <div class="grid-item">Aeneas</div>
+                            <div class="grid-item">Gregor Lawrenz</div>
+                            <div class="grid-item">Trojanischer Prinz, Enkel des Zeus</div>
+
+                            <div class="grid-item">Hera</div>
+                            <div class="grid-item">Pauline Findewirth</div>
+                            <div class="grid-item">Gemahlin des Zeus, Schutzpatronin Karthagos</div>
+
+                            <div class="grid-item">Zeus</div>
+                            <div class="grid-item">Julian Allescher</div>
+                            <div class="grid-item">Herrscher über den Olymp, Großvater des Aeneas</div>
+
+                            <div class="grid-item">Atropos</div>
+                            <div class="grid-item">Corinna Storbeck</div>
+                            <div class="grid-item">Eine der Schicksalsschwestern</div>
+
+                            <div class="grid-item">Láchesis</div>
+                            <div class="grid-item">Friederike Großmann</div>
+                            <div class="grid-item">Eine der Schicksalsschwestern</div>
+
+                            <div class="grid-item">Klotho</div>
+                            <div class="grid-item">Clara Komann</div>
+                            <div class="grid-item">Eine der Schicksalsschwestern</div>
+
+                            <div class="grid-item">Hermes</div>
+                            <div class="grid-item">Tarik Wilke</div>
+                            <div class="grid-item">Schutzgott der Reisenden und olympischer Götterbote</div>
+
+                            <div class="grid-item">Eros</div>
+                            <div class="grid-item">Ben S.</div>
+                            <div class="grid-item">Gott der erotischen Liebe</div>
+
+                            <div class="grid-item">Hades</div>
+                            <div class="grid-item"></div>
+                            <div class="grid-item">Herrscher über die Unterwelt</div>
+
+                            <div class="grid-item">Misenos</div>
+                            <div class="grid-item">Nico Westerbeck</div>
+                            <div class="grid-item">Barde im Gefolge des Aeneas</div>
+
+                            <div class="grid-item">Achates</div>
+                            <div class="grid-item">Alexander Dyck</div>
+                            <div class="grid-item">Treuester Freund des Aeneas</div>
+
+                            <div class="grid-item">Tartos</div>
+                            <div class="grid-item"></div>
+                            <div class="grid-item">Spielmann und Sänger in Didos Hof</div>
+
+                            <div class="grid-item">Selene</div>
+                            <div class="grid-item">Anna Shaposhnik</div>
+                            <div class="grid-item">Didos Schwester und engste Vertraute</div>
+
+                            <div class="grid-item">Didos Leibwache</div>
+                            <div class="grid-item">Sebastian Hörner</div>
+                            <div class="grid-item">Neben Selene engster Vertrauter Didos</div>
+                        </div>
+                    </section>
+                </div>
             </article>
         </div>
         <hr>
