fixed hyperlink in insta-grid

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -784,7 +784,7 @@
                         </div>
 
                         <div class="item">
-                            <a href="https://www.instagram.com/p/C6MIOusNmDt/?img_index=5"
+                            <a href="https://www.instagram.com/p/C4P57TYN62a/?img_index=1"
                                 title="Auf Instagram ansehen"
                                 target="_blank"
                                 rel="noopener noreferrer">
