--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -69,7 +69,8 @@
             <ul>
                 <li><a href="/">Startseite</a></li>
                 <li><a href="/ueber">über uns</a></li>
-                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                <li><a href="/pandora-prometheus/">Pandora & Prometheus (2024)</a></li>
+                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper (2020)</a></li>
                 <li><a href="/tickets">🔥 Tickets 🔥</a></li>
                 <li><a href="/kontakt">kontakt</a></li>
                 <li><a href="/datenschutz">datenschutzerklärung</a></li>
