Updated text in insta grid

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -337,8 +337,8 @@
                                          alt="Sebastian Hörner als Unterweltwesen mit Feuerpoi und Maske.">
                                     <figcaption>Ein beeindruckendes Solo mit Feuerpoi von Sebastian Hörner als Unterweltwesen.</figcaption>
                                 </figure> 
-                                <div class="overlay">s
-                                    <p>In der Unterwelt zeigt sich so manch absurd-komische Fratze (Sebastian Hörner). </p>
+                                <div class="overlay">
+                                    <p>In der Unterwelt zeigt sich so manch absurd-komische Fratze. </p>
                                 </div>
                             </a>
                         </div>
@@ -357,7 +357,7 @@
                                     <figcaption>Marie Schneider als eines der Unterweltwesen performt ein Solo mit Feuerpoi. </figcaption>
                                 </figure> 
                                 <div class="overlay">
-                                    <p>Unheimliche Geister (Marie Schneider) konfrontieren Aeneas in der Unterwelt.</p>
+                                    <p>Unheimliche Geister konfrontieren Aeneas in der Unterwelt.</p>
                                 </div>
                             </a>
                         </div>
@@ -838,7 +838,7 @@
                                 <div class="overlay">
                                     <p>Das erste Aufeinandertreffen der beiden Völker verläuft feierlich:<br>
 
-                                        Der Barde Misenos (Nico Westerbeck) aus dem Gefolge des Aeneas, besingt dessen heldenhafte Taten in einem epischen Lied.</p>
+                                        Der Barde Misenos aus dem Gefolge des Aeneas, besingt dessen heldenhafte Taten in einem epischen Lied.</p>
                                 </div>
                             </a>
                         </div>
@@ -961,7 +961,8 @@
                                 </figure> 
                                 <div class="overlay">
                                     <p>"Die Stadt Karthago, von Heras Schutz bedacht
-                                        wird von einer klugen Herrscherin bewacht"
+                                        wird von einer klugen Herrscherin bewacht":<br>
+                                        Dido.
                                     </p>
                                 </div>
                             </a>
