Updated text in insta grid

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -283,7 +283,7 @@
                                     <figcaption>Aeneas (Gregor Lawrenz) sinkt auf die Knie.</figcaption>
                                 </figure>
                                 <div class="overlay">
-                                    <p>Allmählich dämmert Aeneas (Gregor Lawrenz), das seine Entscheidung in der Vergangenheit wohl kein gutes Ende für Dido als Folge hatte...</p>
+                                    <p>Allmählich dämmert Aeneas, das seine Entscheidung in der Vergangenheit wohl kein gutes Ende für Dido als Folge hatte...</p>
                                 </div>
                             </a>
                         </div>
@@ -301,7 +301,7 @@
                                     <figcaption>Dido (Greta Hoss) als verblassende Erinnerung in der Unterwelt</figcaption>
                                 </figure>
                                     <div class="overlay">
-                                        <p>Als Aeneas Dido (Greta Hoss) in der Unterwelt trifft, scheint sie ihn nicht wahrnehmen zu können...</p>
+                                        <p>Als Aeneas Dido in der Unterwelt trifft, scheint sie ihn nicht wahrnehmen zu können...</p>
                                     </div>
                             </a>
                         </div>
